# CppGarbageCollector

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppGC.sln
CSPerfTest/: CSPerfTest.csproj  Program.cs
CppGC/: CppGC.vcxproj  CppGC.vcxproj.filters  CppGCTest.cpp  GCObject.cpp  GCObject.h  GCObjectRootPtr.h  GCPerfTest.cpp  GCPerfTest.h  GarbageCollector.h  IRootsRegistry.h
CppGC/perf_test/: CmakeLists.txt
CppGC/tests/: CMakeLists.txt  tests.cpp
include/: GCObject.h  GarbageCollector.h  IRootsRegistry.h
perf_test/: perfomace_test.cpp
